# urlgraph

./: .gitignore  graph.html  pyproject.toml
urlgraph/: __init__.py  __main__.py
