[tool.poetry]
name = "urlgraph"
version = "0.1.1"
description = ""
authors = ["Piotr Żarczyński <piotr.zarczynski.06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.3"
aiodns = "^3.1.1"
beautifulsoup4 = "^4.12.3"
black = "^24.1.1"
isort = "^5.13.2"
fire = "^0.5.0"
alive-progress = "^3.1.5"
pyvis = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
